tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_82.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((+ ((0 + z) - (1 - x))) <= (((- y) MOD (z DIV 200)) DIV (- (- 0))));
               p := ((~ ((1223 MOD 200) # (1 DIV 200))) OR (((1 + 200) < (z - 1)) & ((y * z) # (x DIV 200))));
               y := ((+ (+ (1223 + z))) * (((+ y) * (200 + 1223)) - ((z DIV 0) * (0 DIV 2))));
  (* error *)  p := ((((r - 0) - (z DIV y)) DIV ((- 1223) * (2 DIV 200))) # (((1223 MOD 200) - (z - 1)) MOD (- (0 MOD 200))));
               x := (((+ (2 DIV 1)) MOD (- (2 * 1))) MOD (- (+ (- 2))));
               q := (~ (((- 2) * (z * 200)) < (- (x MOD 1223))));
               r := ((((y - 1) MOD (x * z)) MOD ((2 - z) DIV (- 2))) >= (((- y) + (1223 + y)) MOD ((+ y) - (1 DIV 2))));
               x := ((((1223 - 200) + (0 * y)) MOD ((- 0) + (x MOD 1223))) - ((+ (0 - 1)) MOD ((x * 1) - (1223 + 2))));
               x := (- ((- (1 MOD x)) - ((200 MOD 1) * (- 0))));
               q := (~ (((200 DIV 1) + (+ 0)) # ((z * 0) - (1 + z))))
END Test14.